--- a/ABC.html
+++ b/ABC.html
@@ -34,6 +34,11 @@
             <p>C is for Carrot</p>
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a2/Vegetable-Carrot-Bundle-wStalks.jpg/2560px-Vegetable-Carrot-Bundle-wStalks.jpg" alt="carrot">
         </section>
+        <section>
+            <h3>Letter I</h3>
+            <p>I is for Icecream</p>
+            <img src="https://www.pbs.org/food/files/2012/07/History-of-Ice-Cream-1.jpg" alt="icecream">
+        </section>
     </hr>
     </main>
 </body>
