--- a/ABC.html
+++ b/ABC.html
@@ -35,6 +35,11 @@
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a2/Vegetable-Carrot-Bundle-wStalks.jpg/2560px-Vegetable-Carrot-Bundle-wStalks.jpg" alt="carrot">
         </section>
         <section>
+            <h3>Letter D</h3>
+            <p>D is for Dog</p>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/60/YellowLabradorLooking.jpg/640px-YellowLabradorLooking.jpg" alt="dog">
+        </section>
+        <section>
             <h3>Letter I</h3>
             <p>I is for Icecream</p>
             <img src="https://www.pbs.org/food/files/2012/07/History-of-Ice-Cream-1.jpg" alt="icecream">
