--- a/LetterZ.html
+++ b/LetterZ.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <section>
+        <h3>Letter Z</h3>
+        <p>Z is for Zebra</p>
+        <img src="https://assets.entrepreneur.com/content/3x2/2000/20181105214106-GettyImages-824977200.jpeg?crop=4:3" alt="Zebra">
+    </section>
 </body>
 </html>
