--- a/ABC.html
+++ b/ABC.html
@@ -49,6 +49,17 @@
             <p>J is for Jack Fruit</p>
             <img src="https://i.pinimg.com/736x/92/19/f1/9219f1cd0b8d75b7a5ffb880240e2803.jpg" alt="jackfruit">
         </section>
+        <section>
+            <h3>Letter Y</h3>
+            <p>Y is for Yak</p>
+            <img src="https://miro.medium.com/v2/resize:fit:1400/1*TLk1BwXIZA5kaMhEbTXY0g.jpeg" alt="Yak" width="320" height="240">
+        </section>
+        <section>
+            <h3>Letter Z</h3>
+            <p>Z is for Zebra</p>
+            <img src="https://assets.entrepreneur.com/content/3x2/2000/20181105214106-GettyImages-824977200.jpeg?crop=4:3" alt="Zebra" width="320" height="240">
+        </section>
+        
     </hr>
     </main>
 </body>
